# fast_api

./: .gitignore  README.md  pyproject.toml  script.sh
dio_blog/: main.py
dio_blog/controllers/: post.py
dio_blog/schemas/: post.py
dio_blog/views/: post.py
