[project]
name = "dio-blog"
version = "0.1.0"
description = "Teste do fast_api - DIO"
authors = [
    {name = "Paulo CSF"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "tree (>=0.2.4,<0.3.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]

[tool.black]
line-length = 120


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
